@@ -37,6 +37,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 
 ## Fixes
 - `dig-now`: clear item occupancy flags for channeled tiles that had items on them
+- `RemoteFortressReader`: fix a crash with engraving without image
 
 ## Misc Improvements
 - `autonick`: additional nicknames based on burrowing animals, colours, gems and minerals added
